bk_ida/gccida/c3/mark_reload_reg_in_use
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4658:62: error: must use 'enum' tag to refer to type 'reload_type'
void  mark_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                             ^
                                                             enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4658:80: error: must use 'enum' tag to refer to type 'machine_mode'
void  mark_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                                               ^
                                                                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4703:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v8 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4783:41: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v14 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)v6, 68), ( __m128i)xmm*(short *)0x65ADF0); 
                                        ^~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4347:52: note: expanded from macro '_mm_shuffle_epi32'
  (__m128i)__builtin_ia32_pshufd((__v4si)(__m128i)(a), (int)(imm))
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4783:70: error: use of undeclared identifier 'xmm'
v14 = _mm_add_epi64( _mm_shuffle_epi32( ( __m128i)v6, 68), ( __m128i)xmm*(short *)0x65ADF0); 
                                                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4784:7: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'HARD_REG_ELT_TYPE' (aka 'unsigned long long') of different size
v15 = ( __m128i)reload_reg_used; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4785:7: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'HARD_REG_ELT_TYPE' (aka 'unsigned long long') of different size
v16 = ( __m128i)reload_reg_used_at_all; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4789:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v19 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4790:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v25 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4797:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v19 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4798:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE00); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4799:42: error: use of undeclared identifier 'xmm'
v21 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE10); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4800:42: error: use of undeclared identifier 'xmm'
v22 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x65AE20); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4801:42: error: use of undeclared identifier 'xmm'
v23 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x668290); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4802:42: error: use of undeclared identifier 'xmm'
v24 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x6682A0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4803:5: error: assigning to '__m128d' (vector of 2 'double' values) from incompatible type 'long long'
v25 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4808:4: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v26.m128i_i64[0] = v21.m128i_i64[0] << v14.m128i_i8[0]; 
~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4808:23: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v26.m128i_i64[0] = v21.m128i_i64[0] << v14.m128i_i8[0]; 
                   ~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/reload1.c:4808:43: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v26.m128i_i64[0] = v21.m128i_i64[0] << v14.m128i_i8[0]; 
                                       ~~~^~~~~~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/mark_reload_reg_in_use/src/obj/reload1.o] Error 1
